--- a/index.html
+++ b/index.html
@@ -9,21 +9,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
-  <style>
-    html {
-      font-size: 62.5%;
-    }
 
-    body {
-      font-size: 1.6rem;
-    }
+  <!-- [======= CSS3 =======] -->
+  <link rel="stylesheet" href="src/css/style.css">
+  <link rel="stylesheet" href="src/css/reset.css">
+  <link rel="stylesheet" href="src/css/responsivo.css">
+  <!-- ====================== -->
 
-    * {
-      margin: 0px;
-      padding: 0px;
-      box-sizing: border-box;
-    }
-  </style>
 </head>
 
 <body>
